--- a/ScrambledPass.DesktopApp/Assets/Localization/pl-PL.json
+++ b/ScrambledPass.DesktopApp/Assets/Localization/pl-PL.json
@@ -25,7 +25,7 @@
 	"DefaultCharacterCount": "Domyślna ilość znaków specjalnych",
 	"ClearClipboard": "Wyczyść showek po skopiowaniu hasła",
 	"ClearClipboardDelay": "Czas do wyczyszczeniem schowka (sekundy)",
-	"Save": "Zapisz",
+	"Save": "Zatwierdź",
 	"RestoreDefault": "Przywróć domyślne",
 	"Back": "Wróć",
 	"SelectWordFile": "Wybierz plik z wyrazami"
