Implemented theme switching, minor refactor

--- a/ScrambledPass.DesktopApp/Assets/Localization/en-US.json
+++ b/ScrambledPass.DesktopApp/Assets/Localization/en-US.json
@@ -20,6 +20,9 @@
 	"PasswordPoor": "poor",
 	"Language": "Language",
 	"Theme": "Theme",
+	"ThemeAutomatic": "Automatic",
+	"ThemeLight": "Light",
+	"ThemeDark": "Dark",
 	"LoadWordList": "Remember last used word list",
 	"DefaultWordCount": "Default word count",
 	"DefaultCharacterCount": "Default character count",
