--- a/ScrambledPass.DesktopApp/Assets/Localization/pl-PL.json
+++ b/ScrambledPass.DesktopApp/Assets/Localization/pl-PL.json
@@ -20,6 +20,9 @@
 	"PasswordPoor": "tragiczne",
 	"Language": "Język",
 	"Theme": "Motyw",
+	"ThemeAutomatic": "Automatyczny",
+	"ThemeLight": "Jasny",
+	"ThemeDark": "Ciemny",
 	"LoadWordList": "Pamiętaj ostatnio użytą listę wyrazów",
 	"DefaultWordCount": "Domyślna ilość słów",
 	"DefaultCharacterCount": "Domyślna ilość znaków specjalnych",
