--- a/ScrambledPass.DesktopApp/Assets/Localization/en-US.json
+++ b/ScrambledPass.DesktopApp/Assets/Localization/en-US.json
@@ -13,6 +13,7 @@
 	"Entropy": "Entropy",
 	"Symbols": "Special characters",
 	"SymbolMode": "Symbol mode",
+	"IncludeCharacters": "Use:",
 	"PasswordStrength": "Password quality",
 	"PasswordGreat": "great",
 	"PasswordGood": "good",
