--- a/ScrambledPass.DesktopApp/Assets/Localization/pl-PL.json
+++ b/ScrambledPass.DesktopApp/Assets/Localization/pl-PL.json
@@ -13,6 +13,7 @@
 	"Entropy": "Entropia",
 	"Symbols": "Znaki specjalne",
 	"SymbolMode": "Tryb znaków",
+	"IncludeCharacters": "Użyj:",
 	"PasswordStrength": "Jakość hasła",
 	"PasswordGreat": "świetne",
 	"PasswordGood": "dobre",
